# LazySoC

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  sample.yaml
.claude/: settings.local.json
output/: ddr_phy_ctrl_apb_slave.sv  ddr_phy_ctrl_pkg.sv  ddr_phy_ctrl_regs.h  ddr_phy_ctrl_regs.md
src/lazysoc/: __init__.py  main.py  parser.py
src/lazysoc/generators/: __init__.py  c_gen.py  doc_gen.py  sv_gen.py
src/lazysoc/templates/: c_header.h.j2  sv_apb_slave.sv.j2  sv_package.sv.j2
tests/: conftest.py  test_parser.py
